2003-07-10  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (macro_define): Make clear the diagnostic about
	variable names starting with `_' is about *Make* variables.

	For Debian Bug #193907:
	* automake.texi (Clean): make maintainer-clean should still
	allow ./configure && make to run.

	* automake.texi (CVS): Typo.

2003-07-05  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.in: Bump vesion to 1.7.5c.

	* configure.ac: Bump vesion to 1.7.5b.
	* NEWS: Update for 1.7.5b.

	* lib/config.guess, lib/config.sub: New upstream version.

2003-07-04  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (Optional, Dist): AC_CONFIG_AUX_DIR files
	are automatically distributed.

	* tests/stamph.test, tests/package.test: Delete.
	* tests/Makefile.am (TESTS): Remove them, and do not list
	aclocal.test and aclocal2.test twice.

	* lib/depcomp (icc): Update to grok ICC 7.1's output.
	* m4/depend.m4 (_AM_DEPENDENCIES): Check dependency generation
	in a subdirectory, and with many dependencies.  This
	catches more failures of depcomp.
	Reports from Ralf Wildenhues and Akim Demaille.

2003-07-01  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (scan_autoconf_traces): Check the expected
	number of arguments of each traced macro.
	* tests/conff2.test: New files.
	* tests/Makefile.am (TESTS): Add conff2.test.
	Report from Paolo Bonzini.

2003-06-27  Ralf Corsepius  <corsepiu@faw.uni-ulm.de>  (tiny change)

	* lib/am/configure.am (maintainer-clean): Remove
	$(top_srcdir)/autom4te.cache, not autom4te.cache.

2003-06-15  Jens Elkner  <elkner@imsgroup.de>  (tiny change)

	* m4/lispdir.m4 (AM_PATH_LISPDIR): Fix sed commands to work with
	POSIXLY_CORRECT=1.

2003-06-13  Paul Eggert  <eggert@twinsun.com>

	* lib/install-sh (dsttmp, rmtmp): Do not use '#' in file names;
	it's not guaranteed by POSIX and it doesn't work on OpenVMS.
	Bug reported by Bernard Giroud in:
	http://mail.gnu.org/archive/html/autoconf-patches/2003-06/msg00013.html
