@@ -1,4 +1,4 @@
 @set UPDATED 10 July 2003
 @set UPDATED-MONTH July 2003
-@set EDITION 1.7.5c
-@set VERSION 1.7.5c
+@set EDITION 1.7.6
+@set VERSION 1.7.6
