@@ -1,4 +1,4 @@
-Bugs fixed in 1.7.5b:
+Bugs fixed in 1.7.6:
 * Fix depcomp's icc mode for ICC 7.1.
 * Diagnose calls to AC_CONFIG_FILES and friends with not enough arguments.
 * Fix maintainer-clean's removal of autom4te.cache in VPATH builds.
