@@ -1,5 +1,7 @@
 2003-07-10  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* configure.in, NEWS: Bump version to 1.7.6.
+
 	* automake.in (macro_define): Make clear the diagnostic about
 	variable names starting with `_' is about *Make* variables.
 
